--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,13 @@
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
-      "args": [],
+      "args": [
+        ""
+      ],
       "stopAtEntry": false,
-      "cwd": "c:\\Users\\User\\OneDrive\\文件\\GitHub\\Cheng-I-Lin.github.io",
+      "cwd": "c:/Users/User/OneDrive/文件/GitHub/Cheng-I-Lin.github.io",
       "environment": [],
-      "program": "c:\\Users\\User\\OneDrive\\文件\\GitHub\\Cheng-I-Lin.github.io\\build\\Debug\\outDebug",
+      "program": "c:/Users/User/OneDrive/文件/GitHub/Cheng-I-Lin.github.io/build/Debug/outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-win32-seh-rt_v6-rev0\\mingw64\\bin\\gdb.exe",
